# 2048

./: game.cabal
src/: Main.hi  Main.hs
